--- a/index.cshtml
+++ b/index.cshtml
@@ -11,12 +11,13 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen" />
-        <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="css/home.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="css/canvasLine.css" type="text/css" media="screen" />
         <link rel="stylesheet" href="lightbox/css/lightbox.css" type="text/css" media="screen" />
         <link href='http://fonts.googleapis.com/css?family=Open+Sans|Baumans' rel='stylesheet' type='text/css' />
 
         <script src="js/modernizr-2.6.2.min.js" type="text/javascript"></script>
-        <script src="js/respond.js" type="text/javascript" type="text/javascript"></script>
+        <script src="js/respond.js" type="text/javascript"></script>
 
         <!-- include external jQuery file but fall back to local file if external one fails to load -->
         <script src="http://code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
@@ -25,55 +26,22 @@
         <script src="js/prefixfree.min.js" type="text/javascript"></script>
         <script src="js/jquery.slides.min.js" type="text/javascript"></script>
         <script src="lightbox/js/lightbox-2.6.min.js" type="text/javascript"></script>
-
+        <script src="js/home.js" type="text/javascript"></script>
         <!--[if lt IE 9]>
 	        <style>
     	        header
                 {
         	        margin: 0 auto 20px auto;
                 }
-                #four_columns .img-item figure span.thumb-screen
-                {
-       		        display:none;
-                }  
             </style>
         <![endif]-->
 
 
-        <script type="text/javascript">
-            $(function () {
-                $('#slides').slidesjs({
-                    height: 235,
-                    navigation: false,
-                    pagination: false,
-                    effect: {
-                        fade: {
-                            speed: 400
-                        }
-                    },
-                    callback: {
-                        start: function (number) {
-                            $("#slider_content1,#slider_content2,#slider_content3").fadeOut(500);
-                        },
-                        complete: function (number) {
-                            $("#slider_content" + number).delay(500).fadeIn(1000);
-                        }
-                    },
-                    play: {
-                        active: false,
-                        auto: false,
-                        interval: 6000,
-                        pauseOnHover: false
-                    }
-                });
-            });
-        </script>
-
-    </head>
+     </head>
     <body>
         <header>
-            <h1>HTML5 Sample Page test 1</h1>
-            <p>A responsive website tutorial</p>
+            <h1>Portfolio of MACMAC24</h1>
+            <p>A responsive website</p>
             <nav>
                 <ul>
                     <li><a href="javascript:void(0)">Home</a></li>
@@ -85,11 +53,11 @@
         </header>
 
         <section class="container">
-            <h2 class="hidden">Lorem Ipsum</h2>
+            <h2 class="hidden">Code Samples</h2>
             <article id="slider_content1">
-                <h3>Picture 1</h3>
-                <p>This is a picture of the nifty food.</p>
-                <a class="button" href="some_page.html">test link 1</a>
+                <h3>A Simple Canvas Example</h3>
+                <p>Drawing a line on a canvas</p>
+                <a class="button" href="canvasLine.htm">Canvas</a>
             </article>
             <article id="slider_content2">
                 <h3>Picture 2</h3>
@@ -102,9 +70,9 @@
                 <a class="button" href="some_page.html">test link 3</a>           
             </article>
             <div id="slides">
-                <img src="img/slide1.jpg" alt="Some alt text" />
-                <img src="img/slide2.jpg" alt="Some alt text" />
-                <img src="img/slide3.jpg" alt="Some alt text" />
+                <img src="img/home/slide1.jpg" alt="Some alt text" />
+                <img src="img/home/slide2.jpg" alt="Some alt text" />
+                <img src="img/home/slide3.jpg" alt="Some alt text" />
             </div>
         </section>
         <section id="spacer">
@@ -120,112 +88,28 @@
         <section id="boxcontent">
             <h2 class="hidden">Adipiscing</h2>
             <article>
-                <img src="img/icon.png" alt="alt text"/>
+                <img src="img/home/icon.png" alt="alt text"/>
                 <h3>Lorem ipsum</h3>
                 <p>Eines Tages aber beschloß eine kleine Zeile Blindtext, ihr Name war Lorem Ipsum, hinaus zu gehen.</p>
             </article>
             <article>
-                <img src="img/icon.png" alt="alt text"/>
+                <img src="img/home/icon.png" alt="alt text"/>
                 <h3>Consectetuer</h3>
                 <p>Der große Oxmox riet ihr davon ab, da es dort wimmele von bösen Kommata, wilden Fragezeichen...</p>
             </article>
             <article>
-                <img src="img/icon.png" alt="alt text" />
+                <img src="img/home/icon.png" alt="alt text" />
                 <h3>Dolor sit amet</h3>
                 <p>Es packte seine sieben Versalien, schob sich sein Initial in den Gürtel und machte sich auf den Weg.</p>
             </article>
             <br class="clear"/>
         </section>
-        <section id="four_columns">
-            <h2>Lorem ipsum</h2>
-            <article class="img-item">
-                <h3 class="hidden">Dolor sit amet</h3>
-                <figure>
-                    <a href="img/example-slide-1.jpg" rel="lightbox" title="Some Title">
-                        <span class="thumb-screen"></span>
-                        <img src="img/example-slide-1sml.jpg" alt="Some alt text" width="200" height="113" />
-                    </a>
-                    <figcaption>
-                        <strong>Photo by: Some Name</strong>
-                        Als es die ersten Hügel des Kursivgebirges erklommen hatte
-                    </figcaption>
-                </figure>
-            </article>
-            <article class="img-item">
-                <h3 class="hidden">Sit Amet</h3>
-                <figure>
-                    <a href="img/example-slide-2.jpg" rel="lightbox" title="Some Title">
-                        <span class="thumb-screen"></span>
-                        <img src="img/example-slide-2sml.jpg" alt="Some alt text" width="200" height="113" />
-                    </a>
-                    <figcaption>
-                        <strong>Photo by: Some Name</strong>
-                        warf es einen letzten Blick zurück auf die Skyline seiner Heimatstadt Buchstabhausen
-                    </figcaption>
-                </figure>
-            </article>
-            <article class="img-item">
-                <h3 class="hidden">Dolor Sit</h3>
-                <figure>
-                    <a href="img/example-slide-3.jpg" rel="lightbox" title="Some Title">
-                        <span class="thumb-screen"></span>
-                        <img src="img/example-slide-3sml.jpg" alt="Some alt text" width="200" height="113" />
-                    </a>
-                    <figcaption>
-                        <strong>Photo by: Some Name</strong>
-                        die Headline von Alphabetdorf und die Subline seiner eigenen Straße.
-                    </figcaption>
-                </figure>
-            </article>
-            <article class="img-item">
-                <h3 class="hidden">Lorem Ipsum</h3>
-                <figure>
-                    <a href="img/example-slide-1.jpg" rel="lightbox" title="Some Title">
-                        <span class="thumb-screen"></span>
-                        <img src="img/example-slide-1sml.jpg" alt="Some alt text" width="200" height="113" />
-                    </a>
-                    <figcaption>
-                        <strong>Photo by: Some Name</strong>
-                        Wehmütig lief ihm eine rhetorische Frage über die Wange.
-                    </figcaption>
-                </figure>
-            </article>
-            <br class="clear"/>
-        </section>
 
-        <section id="text_columns">
-            <h2 class="hidden">Blindtext</h2>
-            <article class="column1">
-                <h3>Dolor sit amet</h3>
-                <p>Unterwegs traf es eine Copy. Die Copy warnte das Blindtextchen, da, wo sie herkäme wäre sie zigmal umgeschrieben worden und alles, was von ihrem Ursprung noch übrig wäre, sei das Wort "und" und das Blindtextchen solle umkehren und wieder in sein eigenes, sicheres Land zurückkehren.</p>
-                <p>Doch alles Gutzureden konnte es nicht überzeugen und so dauerte es nicht lange, bis ihm ein paar heimtückische Werbetexter auflauerten, es mit Longe und Parole betrunken machten und es dann in ihre Agentur schleppten, wo sie es für ihre Projekte wieder und wieder mißbrauchten.</p>
-            </article>
-            <section class="column2">
-                <h3 class="hidden">Lorem Impsum</h3>
-                <article class="row">
-                    <h4 class="hidden">Dolor sit</h4>
-                    <img src="img/icon.png" width="80" class="rocket" alt="Some alt text"/>
-                    <p>Und wenn es nicht umgeschrieben wurde, dann benutzen Sie es immernoch.</p>
-                </article>
-                <article class="row">
-                    <h4 class="hidden">Ipsum</h4>
-                    <img src="img/icon.png" width="80" class="clock" alt="Some alt text"/>
-                    <p>Doch alles Gutzureden konnte es nicht überzeugen und so dauerte es nicht.</p>
-                </article>
-            </section>
-        </section>
         <footer>
             <h2 class="hidden">Our footer</h2>
             <section id="copyright">
                 <h3 class="hidden">Copyright notice</h3>
                 <div class="wrapper">
-                    <div class="social">
-                        <a href="javascript:void(0)"><img src="img/Social-Networks-Google-plus-icon.png" alt="google plus" width="25"/></a>
-                        <a href="javascript:void(0)"><img src="img/Logos-Tumblr-icon.png" alt="tumblr" width="25"/></a>
-                        <a href="javascript:void(0)"><img src="img/Logos-Youtube-icon.png" alt="youtube" width="25"/></a>
-                        <a href="javascript:void(0)"><img src="img/Social-Networks-Bebo-icon.png" alt="bebo" width="25"/></a>
-                        <a href="javascript:void(0)"><img src="img/Social-Networks-Xing-icon.png" alt="xing" width="25"/></a>
-                    </div>
                     &copy; Copyright 2012 by <a href="http://www.lingulo.com">Lingulo</a>. All Rights Reserved.
                 </div>
             </section>
@@ -247,13 +131,12 @@
                 <article class="column rightlist">
                     <h4>Dolor sit amet</h4>
                     <ul>
-                        <li><a href="javascript:void(0)"><img src="img/example-slide-1sml.jpg" width="86" height="51" alt="some alt text"/><span>Unterwegs traf es eine Copy. Die Copy warnte.</span></a></li>
-                        <li><a href="javascript:void(0)"><img src="img/example-slide-2sml.jpg" width="86" height="51" alt="some alt text" /><span>Doch alles Gutzureden konnte es nicht.</span></a></li>
-                        <li><a href="javascript:void(0)"><img src="img/example-slide-3sml.jpg" width="86" height="51" alt="some alt text" /><span>Und es dann in ihre Agentur schleppten.</span></a></li>
+                        <li><a href="javascript:void(0)"><img src="img/home/example-slide-1sml.jpg" width="86" height="51" alt="some alt text"/><span>Unterwegs traf es eine Copy. Die Copy warnte.</span></a></li>
+                        <li><a href="javascript:void(0)"><img src="img/home/example-slide-2sml.jpg" width="86" height="51" alt="some alt text" /><span>Doch alles Gutzureden konnte es nicht.</span></a></li>
+                        <li><a href="javascript:void(0)"><img src="img/home/example-slide-3sml.jpg" width="86" height="51" alt="some alt text" /><span>Und es dann in ihre Agentur schleppten.</span></a></li>
                     </ul>
                 </article>
             </section>
         </footer>
-
     </body>
 </html>
