--- a/index.cshtml
+++ b/index.cshtml
@@ -13,7 +13,9 @@
         <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen" />
         <link rel="stylesheet" href="css/home.css" type="text/css" media="screen" />
         <link rel="stylesheet" href="css/canvasLine.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="css/blurEffect.css" type="text/css" media="screen" />
         <link rel="stylesheet" href="lightbox/css/lightbox.css" type="text/css" media="screen" />
+        <script src="js/prefixfree.min.js" type="text/javascript"></script>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans|Baumans' rel='stylesheet' type='text/css' />
 
         <script src="js/modernizr-2.6.2.min.js" type="text/javascript"></script>
@@ -23,7 +25,6 @@
         <script src="http://code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
         <script type="text/javascript">window.jQuery || document.write('<script type="text\/javascript" src="js\/jquery-1.10.2.min.js"><\/script>')</script>
 
-        <script src="js/prefixfree.min.js" type="text/javascript"></script>
         <script src="js/jquery.slides.min.js" type="text/javascript"></script>
         <script src="lightbox/js/lightbox-2.6.min.js" type="text/javascript"></script>
         <script src="js/home.js" type="text/javascript"></script>
@@ -85,26 +86,44 @@
                 </form>
             </div>
         </section>
-        <section id="boxcontent">
-            <h2 class="hidden">Adipiscing</h2>
+        <section id="ib-container" class="ib-container">
+            <h2>Blur Effect</h2>
+            <p>An example of blur effect using box shadows, transform and transitions.</p>
             <article>
                 <img src="img/home/icon.png" alt="alt text"/>
-                <h3>Lorem ipsum</h3>
-                <p>Eines Tages aber beschloß eine kleine Zeile Blindtext, ihr Name war Lorem Ipsum, hinaus zu gehen.</p>
+                <header>
+                    <h3>Some Headline</h3>
+                    <span>Some other text</span>
+                </header>
+                <p>Some introduction</p>
             </article>
             <article>
                 <img src="img/home/icon.png" alt="alt text"/>
-                <h3>Consectetuer</h3>
+                <header>
+                    <h3>Consectetuer</h3>
+                    <span>Some other text</span>
+                </header>
                 <p>Der große Oxmox riet ihr davon ab, da es dort wimmele von bösen Kommata, wilden Fragezeichen...</p>
             </article>
             <article>
                 <img src="img/home/icon.png" alt="alt text" />
-                <h3>Dolor sit amet</h3>
+                <header>
+                    <h3>Dolor sit amet</h3>
+                    <span>Some other text</span>
+                </header>
                 <p>Es packte seine sieben Versalien, schob sich sein Initial in den Gürtel und machte sich auf den Weg.</p>
+            </article>
+            <article>
+                <img src="img/home/icon.png" alt="alt text" />
+                <header>
+                    <h3>Dolor sit amet</h3>
+                    <span>Some other text</span>
+                </header>
+                <p>Es packte seine sieben Versalien, schob sich sein Initial in den Gürtel und machte
+                    sich auf den Weg.</p>
             </article>
             <br class="clear"/>
         </section>
-
         <footer>
             <h2 class="hidden">Our footer</h2>
             <section id="copyright">
@@ -138,5 +157,6 @@
                 </article>
             </section>
         </footer>
+        <script src="js/blurEffect.js" type="text/javascript"></script>
     </body>
 </html>
