added parallax slider example

--- a/index.cshtml
+++ b/index.cshtml
@@ -61,19 +61,13 @@
                 <a class="button" href="canvasLine.htm">Canvas</a>
             </article>
             <article id="slider_content2">
-                <h3>Picture 2</h3>
-                <p>This is a picture of the the baby.</p>
-                <a class="button" href="some_page.html">test link 2</a>
-            </article>
-            <article id="slider_content3">
-                <h3>Picture 3</h3>
-                <p>This is a picture of the the baby.</p>
-                <a class="button" href="some_page.html">test link 3</a>           
+                <h3>Parallax Slider Example</h3>
+                <p>An example of parallax slider with thumbnails</p>
+                <a class="button" href="parallaxSlider.htm">Parallax Slider</a>
             </article>
             <div id="slides">
                 <img src="img/home/slide1.jpg" alt="Some alt text" />
                 <img src="img/home/slide2.jpg" alt="Some alt text" />
-                <img src="img/home/slide3.jpg" alt="Some alt text" />
             </div>
         </section>
         <section id="spacer">
